preparing CTF for usage outside of CMS BUGFIX: provide fallback for ajax-errors if not in CMS context BUGFIX: re-added middle-alignment to greybox if not in CMS context BUGFIX: added basic requirements to be independent of cms-inclusion FEATURE: better transformation of save-button (replaced indicator with "saving..." label) ENHANCEMENT: moved String-lib to prototype_improvements.js
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/trunk@43491 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField_popup.css
+++ b/css/ComplexTableField_popup.css
@@ -7,6 +7,11 @@ html,body {
 	background: #fff;	
 }
 
+#ComplexTableField_Popup_DetailForm input.loading {
+	background: #fff url(../../cms/images/network-save.gif) left center no-repeat;
+	padding-left:16px;
+}
+
 .PageControls {
 	padding: 5px;
 	width: 100%;
@@ -66,15 +71,9 @@ form fieldset {
 	clear: none;
 }
 
-.ComplexTableField_Popup input.action
-{
-    position: relative;
-    float: right;
-}
-
 /* Pagination */ 
 
-ComplexTableField_Pagination {
+#ComplexTableField_Pagination {
 	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
